--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+
+  "homepage": "https://Manoranjan-2307.github.com/Lazy_loading/",
   "name": "lazy",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +9,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.0.0",
